[package]
name = "unddser"
version = "0.1.0"
edition = "2021"
authors = ["ivy"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0" }
worker-macros = { version = "0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
image = { git = "https://github.com/RunDevelopment/image", branch = "dds" }
serde = { version = "1.0.216", features = ["derive"] }
async-lock = "3.4.0"
